--- a/photo-gallery/src/App.css
+++ b/photo-gallery/src/App.css
@@ -1,38 +1,111 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Heebo|Oswald');
+
+body {
+    font-family: 'Heebo', "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
+    background: rgb(33, 75, 71);
+    margin: 0;
+    line-height: 1.5em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+    font-size: 2em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1, h2 {
+    font-family: 'Oswald';
+    font-weight: bold;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+* {
+    box-sizing: border-box;
 }
 
-.App-link {
-  color: #61dafb;
+header, main {
+    padding: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background: white;
+    border-bottom: 1px dotted black;
+}
+
+h1 {
+    margin: 0 20px;
+    flex-grow: 1;
+}
+
+.options {
+    padding: 10px 0;
+}
+
+section {
+    margin: 20px auto;
+    width: 90%;
+    min-width: 650px;
+}
+
+
+.animals {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.animals li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    height: 300px;
+    width: 300px;
+    min-width: 200px;
+    border: 1px dotted #aaa;
+    background-color: rgb(181, 215, 215);
+    margin-top: 0px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    margin-left: 0px;
+    padding: 5px;
+}
+
+.animals li h2 {
+    font-size: 1.5em;
+}
+
+.animals li .animal-horn {
+    font-size: .8em;
+    color: #555;
+}
+
+.animals li .year {
+    font-size: .8em;
+}
+
+.image-container {
+    height: 50%;
+}
+
+.image-container img {
+    height: 100%;
+    object-fit: contain;
+}
+
+.animal-horn-filter {
+    height: 48px;
+    width: 150px;
+    font-size: 1.2em;
+}
+
+.animal-keyword-filter {
+  height: 48px;
+  width: 150px;
+  font-size: 1.2em;
+}
+
+.logo {
+  width: 30%;
+  float: right;
 }
