--- a/photo-gallery/src/App.css
+++ b/photo-gallery/src/App.css
@@ -5,6 +5,8 @@ body {
     background: rgb(33, 75, 71);
     margin: 0;
     line-height: 1.5em;
+    display: flex;
+    justify-content: center;
 }
 
 h1 {
@@ -38,7 +40,11 @@ h1 {
 }
 
 .options {
-    padding: 10px 0;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    /* padding: 5px;
+    margin: 5px; */
 }
 
 section {
@@ -106,6 +112,12 @@ section {
 }
 
 .logo {
-  width: 30%;
+  width: 20%;
   float: right;
+}
+
+#copyright {
+  display: flex;
+  justify-content: center;
+  background-color: white;
 }
